# codarme

./: .coverage  .env  .flake8  .gitignore  .pdm-python  Dockerfile  Makefile  README.md  build_files.sh  docker-compose.override.yaml  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt  vercel.json
.devcontainer/: devcontainer.json
aulas/: README.md
data/: dump.rdb
src/: db.sqlite3
src/agenda/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
src/agenda/migrations/: 0001_initial.py  0002_agendamento_cancelado.py  0003_agendamento_prestador.py
src/tamarcado/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/tamarcado/agenda/: apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
src/tamarcado/settings/: base.py  dev.py  prod.py
